[workspace]
resolver = "2"
members = [
  "tokio",
  "tokio-macros",
  "tokio-test",
  "tokio-stream",
  "tokio-util",

  # Internal
  "benches",
  "examples",
  "stress-test",
  "tests-build",
  "tests-integration",
]

[patch.crates-io]
tokio = { path = "tokio" }

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(fuzzing)',
  'cfg(loom)',
  'cfg(mio_unsupported_force_poll_poll)',
  'cfg(tokio_allow_from_blocking_fd)',
  'cfg(tokio_internal_mt_counters)',
  'cfg(tokio_no_parking_lot)',
  'cfg(tokio_no_tuning_tests)',
  'cfg(tokio_unstable)',
  'cfg(target_os, values("cygwin"))',
] }
