[package]
name = "examples"
edition = "2018"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"

# Break out of the parent workspace
[workspace]

[[bin]]
name = "chat"
path = "src/chat.rs"

[[bin]]
name = "echo_client"
path = "src/echo_client.rs"

[[bin]]
name = "echo_server"
path = "src/echo_server.rs"

[[bin]]
name = "hyper"
path = "src/hyper.rs"

[dependencies]
tokio = { version = "0.2.0", features = ["async-await-preview"], path = "../tokio" }
futures = "0.1.23"
bytes = "0.4.9"
hyper = "0.12.8"
