[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
tokio = { version = "0.3.1", path = "../tokio", features = ["full"] }
bencher = "0.1.5"

[dev-dependencies]
tokio-util = { version = "0.4.0", path = "../tokio-util", features = ["full"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.42"

[[bench]]
name = "spawn"
path = "spawn.rs"
harness = false

[[bench]]
name = "mpsc"
path = "mpsc.rs"
harness = false

[[bench]]
name = "scheduler"
path = "scheduler.rs"
harness = false


[[bench]]
name = "sync_rwlock"
path = "sync_rwlock.rs"
harness = false

[[bench]]
name = "sync_semaphore"
path = "sync_semaphore.rs"
harness = false

[[bench]]
name = "signal"
path = "signal.rs"
harness = false

[[bench]]
name = "fs"
path = "fs.rs"
harness = false
