[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
tokio = { version = "0.3.0", path = "../tokio", features = ["full"] }
bencher = "0.1.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2.42"

[[bench]]
name = "spawn"
path = "spawn.rs"
harness = false

[[bench]]
name = "sync_mpsc"
path = "sync_mpsc.rs"
harness = false

[[bench]]
name = "rt_multi_threaded"
path = "rt_multi_threaded.rs"
harness = false


[[bench]]
name = "sync_rwlock"
path = "sync_rwlock.rs"
harness = false

[[bench]]
name = "sync_semaphore"
path = "sync_semaphore.rs"
harness = false

[[bench]]
name = "signal"
path = "signal.rs"
harness = false
