[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
tokio = { version = "1.0.0", path = "../tokio", features = ["full", "tracing"] }
tokio-util = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", path = "../tokio-stream" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
bytes = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }
http = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
httparse = { workspace = true }
httpdate = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }

[target.'cfg(windows)'.dev-dependencies.windows-sys]
version = "0.52"

[[example]]
name = "chat"
path = "chat.rs"

[[example]]
name = "connect"
path = "connect.rs"

[[example]]
name = "echo-udp"
path = "echo-udp.rs"

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "print_each_packet"
path = "print_each_packet.rs"

[[example]]
name = "proxy"
path = "proxy.rs"

[[example]]
name = "tinydb"
path = "tinydb.rs"

[[example]]
name = "udp-client"
path = "udp-client.rs"

[[example]]
name = "udp-codec"
path = "udp-codec.rs"

[[example]]
name = "tinyhttp"
path = "tinyhttp.rs"

[[example]]
name = "custom-executor"
path = "custom-executor.rs"

[[example]]
name = "custom-executor-tokio-context"
path = "custom-executor-tokio-context.rs"

[[example]]
name = "named-pipe"
path = "named-pipe.rs"

[[example]]
name = "named-pipe-ready"
path = "named-pipe-ready.rs"

[[example]]
name = "named-pipe-multi-client"
path = "named-pipe-multi-client.rs"

[[example]]
name = "dump"
path = "dump.rs"

[lints]
workspace = true
