[package]
name = "futures2"

version = "0.1.0"
authors = ["Aaron Turon <aturon@mozilla.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
Enables depending on futures 0.2 and futures 0.1 in the same crate.
"""

[dependencies]
futures = "0.2"
