[package]
name = "stress-test"
version = "0.1.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { path = "../tokio/", features = ["full"] }

[dev-dependencies]
rand = "0.8"
