[package]
name = "tokio-async-await"

# When releasing to crates.io:
# - Update html_root_url.
version = "0.1.6"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-async-await/0.1.6"
description = """
Experimental async/await support for Tokio
"""
categories = ["asynchronous"]

[features]
# This feature comes with no promise of stability. Things will
# break with each patch release. Use at your own risk.
async-await-preview = ["futures/nightly"]

[dependencies]
futures = "0.1.23"
tokio-io = "0.1.7"

[dev-dependencies]
bytes = "0.4.9"
tokio = "0.1.8"
hyper = "0.12.8"
