[package]
name = "tokio-buf"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-buf/0.1.0"
description = """
Asynchronous stream of byte buffers
"""
categories = ["asynchronous"]

[dependencies]
bytes = { version = "0.4.10" }
either = { version =  "1.5", optional = true}
futures = "0.1.23"

[features]
default = ["ext"]
ext = ["bytes/either", "either"]
