[package]
name = "tokio-buf"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0-alpha.1"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-buf/0.2.0-alpha.1/tokio_buf"
description = """
Asynchronous stream of byte buffers
"""
categories = ["asynchronous"]

[dependencies]
bytes = "0.4.10"
either = { version =  "1.5", optional = true}

[features]
# default = ["util"]
# util = ["bytes/either", "either"]

[dev-dependencies]
tokio-mock-task = "0.1.1"

[package.metadata.docs.rs]
all-features = true
