[package]
name = "tokio-compat"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0-alpha.1"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokio-compat/0.1.0-alpha.1/tokio-compat/"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
Compatibility between `tokio` 0.2 and legacy versions.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["runtime", "sink"]
runtime = ["old-timer", "old-reactor", "old-executor", "tokio-executor", "tokio-net", "tokio-timer", "tokio-sync", "num_cpus", "tracing-core"]
sink = ["futures-util/sink"]

[dependencies]
futures-01 = { package = "futures", version = "0.1" }
futures-03-core = { package = "futures-core-preview", version = "0.3.0-alpha.19" }
futures-util = { package = "futures-util-preview", version = "0.3.0-alpha.19", default-features = "false", features = ["compat"] }

# runtime-only
old-timer = { package = "tokio-timer", version = "0.2", optional = true}
old-reactor = { package = "tokio-reactor", version = "0.1", optional = true }
old-executor = { package = "tokio-executor", version = "0.1", optional = true }
tokio-executor = { version = "0.2.0-alpha.6", optional = true, features = ["current-thread", "threadpool"]  }
tokio-net = { version = "0.2.0-alpha.6", optional = true  }
tokio-timer = { version = "0.3.0-alpha.6", optional = true  }
tokio-sync = { version = "0.2.0-alpha.6", optional = true  }
num_cpus =  { version = "1.10.1", optional = true }
tracing-core = { version = "0.1", optional = true }

[dev-dependencies]
tokio-01 = { package = "tokio", version = "0.1" }
tokio-02 = { package = "tokio", version = "0.2.0-alpha.6" }
