[package]
name = "tokio-compat"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0-alpha.1"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokio-compat/0.1.0-alpha.1/tokio-compat/"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
Compatibility between `tokio` 0.2 and legacy versions.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures"]


[features]
default = ["rt-full", "sink"]
# enables the compat runtimes.
rt-current-thread = [
    "tokio-timer-02",
    "tokio-reactor-01",
    "tokio-executor-01",
    "tokio-02/rt-current-thread",
    "tokio-02/timer",
    "tokio-02/sync",
    "tokio-02/net-driver",
]
rt-full = [
    "tracing-core",
    "num_cpus",
    "tokio-02/rt-full",
    "rt-current-thread",
]
sink = ["futures-util/sink"]

[dependencies]
futures-01 = { package = "futures", version = "0.1" }
futures-03-core = { package = "futures-core-preview", version = "0.3.0-alpha.19" }
futures-util = { package = "futures-util-preview", version = "0.3.0-alpha.19", default-features = false, features = ["compat"] }
tokio-02 = { package = "tokio", path = "../tokio", default_features = false }

# runtime-only
tokio-timer-02 = { package = "tokio-timer", version = "0.2", optional = true}
tokio-reactor-01 = { package = "tokio-reactor", version = "0.1", optional = true }
tokio-executor-01 = { package = "tokio-executor", version = "0.1", optional = true }
num_cpus =  { version = "1", optional = true }
tracing-core = { version = "0.1", optional = true }

[dev-dependencies]
tokio-01 = { package = "tokio", version = "0.1" }
