[package]
name = "tokio-executor"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0-alpha.2"
edition = "2018"
documentation = "https://docs.rs/tokio-executor/0.2.0-alpha.2/tokio_executor"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://github.com/tokio-rs/tokio"
license = "MIT"
authors = ["Tokio Contributors <team@tokio.rs>"]
description = """
Future execution primitives
"""
keywords = ["futures", "tokio"]
categories = ["concurrency", "asynchronous"]

[features]
blocking = ["tokio-sync", "lazy_static"]
current-thread = ["crossbeam-channel"]
threadpool = [
  "tokio-sync",
  "crossbeam-deque",
  "crossbeam-queue",
  "crossbeam-utils",
  "futures-core-preview",
  "num_cpus",
  "lazy_static",
  "slab",
]

[dependencies]
tokio-sync = { version = "=0.2.0-alpha.2", optional = true, path = "../tokio-sync" }

tracing = { version = "0.1.5", optional = true }
futures-util-preview = { version = "=0.3.0-alpha.18", features = ["channel"] }

# current-thread dependencies
crossbeam-channel = { version = "0.3.8", optional = true }

# threadpool dependencies
crossbeam-deque = { version = "0.7.0", optional = true }
crossbeam-queue = { version = "0.1.0", optional = true }
crossbeam-utils = { version = "0.6.4", optional = true }
futures-core-preview = { version = "=0.3.0-alpha.18", optional = true }
num_cpus = { version = "1.2", optional = true }
lazy_static = { version = "1", optional = true }
slab = { version = "0.4.1", optional = true }

[dev-dependencies]
tokio = { version = "0.2.0-alpha.1", path = "../tokio" }
tokio-test = { version = "0.2.0-alpha.1", path = "../tokio-test" }

futures-core-preview = "=0.3.0-alpha.18"
rand = "0.7"

[package.metadata.docs.rs]
all-features = true
