[package]
name = "tokio-fs"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0-alpha.1"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-fs/0.2.0-alpha.1/tokio_fs"
description = """
Filesystem API for Tokio.
"""
keywords = ["tokio", "futures", "fs", "file", "async"]
categories = ["asynchronous", "network-programming", "filesystem"]

[dependencies]
tokio-io = { version = "=0.2.0-alpha.1", features = ["util"], path = "../tokio-io" }
tokio-threadpool = { version = "=0.2.0-alpha.1", path = "../tokio-threadpool" }

futures-core-preview = "=0.3.0-alpha.18"
futures-util-preview = "=0.3.0-alpha.18"

[dev-dependencies]
tokio = { version = "=0.2.0-alpha.1", path = "../tokio" }

rand = "0.7"
tempfile = "3"
