[package]
name = "tokio-fs"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0-alpha.4"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-fs/0.2.0-alpha.4/tokio_fs"
description = """
Filesystem API for Tokio.
"""
keywords = ["tokio", "futures", "fs", "file", "async"]
categories = ["asynchronous", "network-programming", "filesystem"]

[dependencies]
tokio-io = { version = "=0.2.0-alpha.4", features = ["util"], path = "../tokio-io" }
tokio-executor = { version = "=0.2.0-alpha.4", features = ["blocking"], path = "../tokio-executor" }
tokio-sync = { version = "=0.2.0-alpha.4", path = "../tokio-sync" }

futures-core-preview = "=0.3.0-alpha.18"
futures-util-preview = "=0.3.0-alpha.18"
lazy_static = "1.3.0"

[dev-dependencies]
tokio = { version = "=0.2.0-alpha.4", path = "../tokio" }
tokio-test = { version = "=0.2.0-alpha.4", path = "../tokio-test" }

rand = "0.7"
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
